--- a/components/login/login.html
+++ b/components/login/login.html
@@ -2,13 +2,13 @@
     <div class="row justify-content-center">
         <div class="col-md-8 col-lg-6 col-xl-5">
 
-            <div class="card login-card p-4 p-md-5">
+            <div class="card login-card p-4 p-md-5 cardBg">
 
                 <div class="card-body">
 
                     <h1 class="text-center mb-4" style="color: #c93b3b;">
                         <i class="fas fa-burger"></i>
-                        **Burger System Login**
+                        Burger System Login
                     </h1>
                     <p class="text-center text-muted mb-4">
                         Please enter your credentials to manage orders.
