--- a/components/login/login.html
+++ b/components/login/login.html
@@ -82,6 +82,9 @@
 
                 <div class="d-grid">
                     <button type="submit" class="btn btn-lg text-white" style="background-color: #005c22;">
+                        LOGIN
+                    </button>
+                    <button type="submit" class="btn btn-lg text-white" style="background-color: #005c22;" onclick="signIn()">
                         SIGN IN
                     </button>
                 </div>
