--- a/components/navBar/navBar.html
+++ b/components/navBar/navBar.html
@@ -7,13 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" onclick="shopBurger()" id="btnShop">Shop</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" onclick="signIn()" id="btnRegister">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <a class="nav-link" onclick="placeOrderView()" id="btnPlaceOrder" >Place Order</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" onclick="cartburger()" id="btnCart">Cart</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
